# exp-coord

./: .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  README.md  license.txt  pyproject.toml
docs/: cli.md  index.md
exp_coord/: __main__.py  cli.py
exp_coord/s3i/: authenticator.py  client.py  entities.py
exp_coord/tasks/: s3i.py
notebooks/: event_overview.py  ltr1_analysis.py  show_status_information.py
scripts/: .gitignore  create_aruco_markers.py
src/exp_coord/: __init__.py  __main__.py  cli.py
src/exp_coord/cli/: data.py  main.py  run.py  s3i.py  utils.py
src/exp_coord/cli/run/: __init__.py  all.py  forever.py  setup.py  single.py
src/exp_coord/core/: config.py  log.py  logging.py  utils.py
src/exp_coord/core/annotations/: s3i.py
src/exp_coord/db/: __init__.py  all_messages_and_events.py  connection.py  device.py  gridfs.py  image.py  status.py
src/exp_coord/handlers/: __init__.py  new_image.py  save_all.py  status.py
src/exp_coord/services/: __init__.py
src/exp_coord/services/s3i/: __init__.py  auth.py  broker.py  client.py  error.py  message_models.py  models.py  processor.py
src/exp_coord/services/s3i/base/: __init__.py  auth.py  client.py  error.py  processor.py
src/exp_coord/services/s3i/broker/: __init__.py  client.py  error.py  models.py
src/exp_coord/services/s3i/config/: __init__.py  client.py  models.py
src/exp_coord/tasks/s3i/: __init__.py  authenticator.py  client.py  entities.py  message_types.py
tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_message_types.py
tests/core/annotations/: test_s3i_annotations.py
tests/integration/: conftest.py  test_setup.py
tests/integration/db/: test_devices.py  test_gridfs.py
tests/services/s3i/: broker_api_swagger.json  test_auth.py  test_error.py  test_message_models.py  test_models.py  test_processor.py
tests/unit/: conftest.py
tests/unit/cli/: test_utils.py
tests/unit/core/: test_config.py  test_log.py  test_utils.py
tests/unit/core/annotations/: test_s3i_annotations.py
tests/unit/services/s3i/: test_auth.py  test_models.py  test_processor.py
