[build-system]
build-backend = "pdm.backend"

requires = [ "pdm-backend" ]

[project]
name = "exp-coord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "HomerusJa", email = "jakob@schluse.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "beanie>=1.29.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "typer>=0.15.1",
]

scripts.exp-coord = "exp_coord.cli.main:app"

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
]
test = [
  "logot>=1.3.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-sugar>=1.0.0",
  "respx>=0.22.0",
]
lint = [
  "ruff>=0.9.1",
  "types-toml>=0.10.8.20240310",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
  ".pdm-build",
  ".venv",
  "htmlcov",
]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  # "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "W",   # pycodestyle warnings
]
lint.ignore = [ "E501" ] # Handled by formatter
lint.per-file-ignores."tests/**/*.py" = [ "S101" ] # Allow "assert" in tests

lint.isort.known-first-party = [ "exp_coord" ]

lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --cov=exp_coord
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-report=html:htmlcov
    --cov-branch
    --no-cov-on-fail
    -v
    --durations=10
    --color=yes
"""
testpaths = [ "tests" ]
pythonpath = [ "src" ]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

asyncio_default_fixture_loop_scope = "function"
logot_capturer = "logot.loguru.LoguruCapturer"

[tool.coverage.run]
branch = true
source = [ "src/exp_coord" ]
omit = [
  "tests/*",
  "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "pass",
  "raise ImportError",
]
#fail_under = 90
show_missing = true
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
plugins = [ "pydantic.mypy" ]

[tool.uv]
default-groups = [ "dev", "test", "lint" ]
